// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`First name render a disabled field 1`] = `
<label id="firstNameField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="firstName"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      First name
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="firstName"
           name="firstName"
           placeholder="Enter your first name"
           autocomplete="given-name"
           data-trackable="field-name"
           aria-required="true"
           required
           disabled
           value
    >
    <span class="o-forms-input__error">
      Please enter your first name
    </span>
  </span>
</label>
`;

exports[`First name render a field with default settings 1`] = `
<label id="firstNameField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="firstName"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      First name
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="firstName"
           name="firstName"
           placeholder="Enter your first name"
           autocomplete="given-name"
           data-trackable="field-name"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please enter your first name
    </span>
  </span>
</label>
`;

exports[`First name render a field with error 1`] = `
<label id="firstNameField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="firstName"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      First name
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text o-forms-input--invalid">
    <input type="text"
           id="firstName"
           name="firstName"
           placeholder="Enter your first name"
           autocomplete="given-name"
           data-trackable="field-name"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please enter your first name
    </span>
  </span>
</label>
`;

exports[`First name render a field with value 1`] = `
<label id="firstNameField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="firstName"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      First name
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="firstName"
           name="firstName"
           placeholder="Enter your first name"
           autocomplete="given-name"
           data-trackable="field-name"
           aria-required="true"
           required
           value="some value"
    >
    <span class="o-forms-input__error">
      Please enter your first name
    </span>
  </span>
</label>
`;
